--- a/Web/index.html
+++ b/Web/index.html
@@ -1,45 +1,34 @@
-<!DOCTYPE html>
-<html lang='pt-br'>
+<!doctype html>
+<html lang="pt-br">
 <head>
-  <meta charset='UTF-8'>
-  <title>NexTrace Painel SOC/NOC</title>
-  <link rel='stylesheet' href='style.css'>
+  <meta charset="UTF-8">
+  <title>NexTrace - Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>NexTrace - Painel SOC/NOC</h1>
-  <form id='painelForm'>
-    <label>Módulo:</label>
-    <select name='modulo'>
-      <option value='Executivo'>Executivo</option>
-      <option value='Compliance'>Compliance</option>
-      <option value='TI'>Threat Intelligence</option>
-      <option value='Forense'>Forense</option>
-      <option value='Monitoramento'>Monitoramento</option>
-      <option value='Backup'>Backup</option>
-      <option value='SOAR'>SOAR</option>
-      <option value='CMDB'>Inventário</option>
-      <option value='Documentacao'>Documentação</option>
-    </select><br><br>
-
-    <label>Parâmetro (se necessário):</label>
-    <input type='text' name='param' placeholder='IP, usuário, CaseID, etc.'><br><br>
-
-    <button type='submit'>Executar</button>
+  <form id="loginForm">
+    <label>Usuário</label>
+    <input type="text" id="user" required>
+    <label>Senha</label>
+    <input type="password" id="pass" required>
+    <button type="submit">Entrar</button>
   </form>
-
-  <pre id='output'></pre>
+  <a href="reset.html">Esqueci minha senha</a>
 
   <script>
-    document.getElementById('painelForm').addEventListener('submit', async function(e) {
+    document.getElementById('loginForm').onsubmit = async (e) => {
       e.preventDefault();
-      const data = new FormData(e.target);
-      const res = await fetch('api.ps1', {
-        method: 'POST',
-        body: new URLSearchParams(data)
-      });
-      const text = await res.text();
-      document.getElementById('output').textContent = text;
-    });
+      const user = document.getElementById('user').value;
+      const pass = document.getElementById('pass').value;
+      const res = await fetch(`/api/login?user=${user}&pass=${pass}`);
+      const json = await res.json();
+      if (json.ok) {
+        window.location.href = "departamentos.html";
+      } else {
+        alert("Login inválido");
+      }
+    };
   </script>
 </body>
 </html>
