Primeiro commit - NexTrace

--- a/Web/departamentos.html
+++ b/Web/departamentos.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,6 @@
     <option value="intel">Threat Intelligence</option>
   </select>
   <button id="acessar">Acessar</button>
-
   <script>
     document.getElementById('acessar').onclick = async () => {
       const dep = document.getElementById('departamento').value;
