--- a/Web/index.html
+++ b/Web/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,6 @@
     <button type="submit">Entrar</button>
   </form>
   <a href="reset.html">Esqueci minha senha</a>
-
   <script>
     document.getElementById('loginForm').onsubmit = async (e) => {
       e.preventDefault();
