--- a/Web/reset.html
+++ b/Web/reset.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,6 @@
     <input type="email" id="email" required>
     <button type="submit">Enviar</button>
   </form>
-
   <script>
     document.getElementById('resetForm').onsubmit = async (e) => {
       e.preventDefault();
