--- a/Web/departamentos.html
+++ b/Web/departamentos.html
@@ -1,30 +1,36 @@
-﻿<!doctype html>
-<html lang="pt-br">
+﻿<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>NexTrace - Departamentos</title>
-  <link rel="stylesheet" href="style.css">
+  <title>NexTrace - Painel SOC/NOC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh; }
+    .login-container { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); width: 300px; }
+    .login-container h2 { text-align: center; margin-bottom: 20px; }
+    label { display: block; margin-top: 10px; }
+    input { width: 100%; padding: 8px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px; }
+    button { margin-top: 20px; width: 100%; padding: 10px; background: #0070f3; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #005bb5; }
+    a { display: block; margin-top: 10px; text-align: center; font-size: 0.9em; }
+  </style>
 </head>
 <body>
-  <h2>Escolha seu departamento</h2>
-  <select id="departamento">
-    <option value="red">Red Team</option>
-    <option value="blue">Blue Team</option>
-    <option value="forense">Forense</option>
-    <option value="intel">Threat Intelligence</option>
-  </select>
-  <button id="acessar">Acessar</button>
-  <script>
-    document.getElementById('acessar').onclick = async () => {
-      const dep = document.getElementById('departamento').value;
-      const res = await fetch(`/api/validate?dep=${dep}`);
-      const json = await res.json();
-      if (json.ok) {
-        window.location.href = "painel.html?dep=" + dep;
-      } else {
-        alert("Autenticação secundária falhou");
-      }
-    };
-  </script>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <label for="usuario">Usuário</label>
+      <input type="text" id="usuario" name="usuario" required>
+
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" name="senha" required>
+
+      <button type="submit">Entrar</button>
+    </form>
+    <a href="#">Esqueci minha senha</a>
+  </div>
+
+  <!-- Importa o script -->
+  <script src="login.js"></script>
 </body>
 </html>
