--- a/Web/painel.html
+++ b/Web/painel.html
@@ -1,31 +1,32 @@
-﻿<!doctype html>
-<html lang="pt-br">
+﻿<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>NexTrace - Painel</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Painel NexTrace</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; background: #eef2f7; margin: 0; padding: 0; }
+    header { background: #0070f3; color: white; padding: 15px; text-align: center; }
+    main { padding: 20px; }
+    .card { background: white; padding: 20px; margin: 10px 0; border-radius: 6px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
+  </style>
 </head>
 <body>
-  <h2 id="titulo"></h2>
-  <div id="ferramentas"></div>
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const dep = params.get("dep");
-    const titulo = {
-      red: "Painel Red Team",
-      blue: "Painel Blue Team",
-      forense: "Painel Forense",
-      intel: "Painel Threat Intelligence"
-    };
-    document.getElementById("titulo").innerText = titulo[dep] || "Painel NexTrace";
-    const ferramentas = {
-      red: ["Scanner de vulnerabilidades", "Exploit toolkit"],
-      blue: ["SIEM", "Dashboard de alertas"],
-      forense: ["Analisador de logs", "Timeline de incidentes"],
-      intel: ["Feeds de ameaças", "Relatórios de IOC"]
-    };
-    document.getElementById("ferramentas").innerHTML =
-      "<ul>" + (ferramentas[dep] || []).map(f => `<li>${f}</li>`).join("") + "</ul>";
-  </script>
+  <header>
+    <h1>Bem-vindo ao Painel SOC/NOC</h1>
+  </header>
+  <main>
+    <div class="card">
+      <h2>Status do Sistema</h2>
+      <p>Tudo funcionando normalmente ✅</p>
+    </div>
+    <div class="card">
+      <h2>Últimos Logs</h2>
+      <ul>
+        <li>[22:00] Sistema inicializado</li>
+        <li>[22:01] Usuário admin logado</li>
+      </ul>
+    </div>
+  </main>
 </body>
 </html>
