Corrige HTML (acessibilidade + viewport) e adiciona vercel.json com headers

--- a/Web/painel.html
+++ b/Web/painel.html
@@ -5,7 +5,7 @@
   <title>Painel NexTrace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; background: #eef2f7; margin: 0; padding: 0; }
+    body { font-family: Arial, sans-serif; background: #eef2f7; margin: 0; }
     header { background: #0070f3; color: white; padding: 15px; text-align: center; }
     main { padding: 20px; }
     .card { background: white; padding: 20px; margin: 10px 0; border-radius: 6px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
@@ -23,8 +23,8 @@
     <div class="card">
       <h2>Últimos Logs</h2>
       <ul>
-        <li>[22:00] Sistema inicializado</li>
-        <li>[22:01] Usuário admin logado</li>
+        <li>[22:40] Sistema inicializado</li>
+        <li>[22:41] Usuário admin logado</li>
       </ul>
     </div>
   </main>
