--- a/Web/departamentos.html
+++ b/Web/departamentos.html
@@ -5,7 +5,7 @@
   <title>NexTrace - Painel SOC/NOC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh; }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh; margin:0; }
     .login-container { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); width: 300px; }
     .login-container h2 { text-align: center; margin-bottom: 20px; }
     label { display: block; margin-top: 10px; }
@@ -20,17 +20,16 @@
     <h2>Login</h2>
     <form id="loginForm">
       <label for="usuario">Usuário</label>
-      <input type="text" id="usuario" name="usuario" required>
+      <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuário" required>
 
       <label for="senha">Senha</label>
-      <input type="password" id="senha" name="senha" required>
+      <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
 
       <button type="submit">Entrar</button>
     </form>
     <a href="#">Esqueci minha senha</a>
   </div>
 
-  <!-- Importa o script -->
   <script src="login.js"></script>
 </body>
 </html>
