--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexTrace — Plataforma institucional de rastreabilidade</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" /><meta name="description" content="NexTrace — Plataforma institucional de rastreabilidade. Desenvolvido por Diogo — Santo André, SP." /></head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+﻿<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>NexTrace - Painel SOC/NOC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <style>
+    body { font-family: Arial, sans-serif; background:#f4f4f4; display:flex; justify-content:center; align-items:center; min-height:100vh; margin:0; }
+    .login-container { background:#fff; padding:30px; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.1); width:320px; }
+    .login-container h2 { text-align:center; margin-bottom:20px; }
+    label { display:block; margin-top:10px; }
+    input { width:100%; padding:10px; margin-top:6px; border:1px solid #ccc; border-radius:4px; }
+    .error { color:#b00020; font-size:0.9em; margin-top:10px; min-height:1.2em; }
+    button { margin-top:16px; width:100%; padding:10px; background:#0070f3; color:#fff; border:none; border-radius:4px; cursor:pointer; }
+    button:hover { background:#005bb5; }
+    a { display:block; margin-top:12px; text-align:center; font-size:0.9em; color:#333; }
+    .hint { margin-top:12px; font-size:0.85em; color:#666; text-align:center; }
+  </style>
+</head>
+<body>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form id="loginForm" novalidate aria-describedby="loginHint">
+      <label for="usuario">Usuário</label>
+      <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuário" autocomplete="username" required>
+
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" name="senha" placeholder="Digite sua senha" autocomplete="current-password" required>
+
+      <button id="entrarBtn" type="submit" aria-label="Entrar no sistema">Entrar</button>
+      <div id="errorBox" class="error" role="alert" aria-live="polite"></div>
+    </form>
+    <a href="#" aria-label="Esqueci minha senha">Esqueci minha senha</a>
+    <div id="loginHint" class="hint">Dica: admin / admin123</div>
+  </div>
+
+  <script type="module" src="/login.js"></script>
+</body>
 </html>
