Pente fino 2.0: A11y + viewport, login robusto, Vite multipágina, headers e redirect

--- a/index.html
+++ b/index.html
@@ -23,10 +23,28 @@
     <h2>Login</h2>
     <form id="loginForm" novalidate aria-describedby="loginHint">
       <label for="usuario">Usuário</label>
-      <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuário" autocomplete="username" required>
+      <input
+        type="text"
+        id="usuario"
+        name="usuario"
+        placeholder="Digite seu usuário"
+        title="Digite seu usuário"
+        aria-label="Usuário"
+        autocomplete="username"
+        required
+      >
 
       <label for="senha">Senha</label>
-      <input type="password" id="senha" name="senha" placeholder="Digite sua senha" autocomplete="current-password" required>
+      <input
+        type="password"
+        id="senha"
+        name="senha"
+        placeholder="Digite sua senha"
+        title="Digite sua senha"
+        aria-label="Senha"
+        autocomplete="current-password"
+        required
+      >
 
       <button id="entrarBtn" type="submit" aria-label="Entrar no sistema">Entrar</button>
       <div id="errorBox" class="error" role="alert" aria-live="polite"></div>
