--- a/index.html
+++ b/index.html
@@ -2,58 +2,37 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>NexTrace - Painel SOC/NOC</title>
+  <title>NexTrace - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <style>
-    body { font-family: Arial, sans-serif; background:#f4f4f4; display:flex; justify-content:center; align-items:center; min-height:100vh; margin:0; }
-    .login-container { background:#fff; padding:30px; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.1); width:320px; }
-    .login-container h2 { text-align:center; margin-bottom:20px; }
-    label { display:block; margin-top:10px; }
-    input { width:100%; padding:10px; margin-top:6px; border:1px solid #ccc; border-radius:4px; }
-    .error { color:#b00020; font-size:0.9em; margin-top:10px; min-height:1.2em; }
-    button { margin-top:16px; width:100%; padding:10px; background:#0070f3; color:#fff; border:none; border-radius:4px; cursor:pointer; }
-    button:hover { background:#005bb5; }
-    a { display:block; margin-top:12px; text-align:center; font-size:0.9em; color:#333; }
-    .hint { margin-top:12px; font-size:0.85em; color:#666; text-align:center; }
-  </style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm" novalidate aria-describedby="loginHint">
-      <label for="usuario">Usuário</label>
-      <input
-        type="text"
-        id="usuario"
-        name="usuario"
-        placeholder="Digite seu usuário"
-        title="Digite seu usuário"
-        aria-label="Usuário"
-        autocomplete="username"
-        required
-      >
+  <h1>NexTrace - Painel SOC/NOC</h1>
+  <form id="loginForm">
+    <label for="user">Usuário</label>
+    <input type="text" id="user" required placeholder="Digite seu usuário">
+    <label for="pass">Senha</label>
+    <input type="password" id="pass" required placeholder="Digite sua senha">
+    <button type="submit">Entrar</button>
+  </form>
+  <a href="reset.html">Esqueci minha senha</a>
+  <script>
+    document.getElementById('loginForm').onsubmit = async (e) => {
+      e.preventDefault();
+      const user = document.getElementById('user').value;
+      const pass = document.getElementById('pass').value;
 
-      <label for="senha">Senha</label>
-      <input
-        type="password"
-        id="senha"
-        name="senha"
-        placeholder="Digite sua senha"
-        title="Digite sua senha"
-        aria-label="Senha"
-        autocomplete="current-password"
-        required
-      >
-
-      <button id="entrarBtn" type="submit" aria-label="Entrar no sistema">Entrar</button>
-      <div id="errorBox" class="error" role="alert" aria-live="polite"></div>
-    </form>
-    <a href="#" aria-label="Esqueci minha senha">Esqueci minha senha</a>
-    <div id="loginHint" class="hint">Dica: admin / admin123</div>
-  </div>
-
-  <script type="module" src="/login.js"></script>
+      try {
+        const res = await fetch(`/api/login?user=${encodeURIComponent(user)}&pass=${encodeURIComponent(pass)}`);
+        const json = await res.json();
+        if (json.ok) {
+          window.location.href = "painel.html";
+        } else {
+          alert("Usuário ou senha inválidos");
+        }
+      } catch (err) {
+        alert("Erro ao conectar com o servidor");
+      }
+    };
+  </script>
 </body>
 </html>
-
