Pente fino 8.0: define login fixo como ADM Master e exibe papel no front-end

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         logDebug("📦 Resposta da API: " + JSON.stringify(json));
 
         if (json.ok) {
-          logDebug("✅ Login autorizado — redirecionando...");
+          logDebug("✅ Login autorizado — papel: " + json.role);
+          alert("Bem-vindo, " + user + " (" + json.role + ")");
           window.location.href = "painel.html";
         } else {
           alert("Usuário ou senha inválidos");
